--- a/printf/Makefile
+++ b/printf/Makefile
@@ -6,17 +6,19 @@
 #    By: yhadari <yhadari@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/11/20 18:09:05 by yhadari           #+#    #+#              #
-#    Updated: 2019/12/05 21:23:29 by yhadari          ###   ########.fr        #
+#    Updated: 2019/12/13 17:47:51 by yhadari          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libftprintf.a
 
 SRC = ft_atoi.c ft_putnbr_fd.c ft_isdigit.c ft_putchar_fd.c ft_itoa.c ft_strlen.c \
-	  ft_strdup.c ft_strchr.c ft_printfdd.c ft_zero.c ft_checkptr.c ft_njma.c
+	  ft_strdup.c ft_strchr.c ft_printfdd.c ft_zero.c ft_checkptr.c ft_njma.c ft_njma1.c \
+	  ft_printf.c
 
 O = ft_atoi.o ft_putnbr_fd.o ft_isdigit.o ft_putchar_fd.o ft_itoa.o ft_strlen.o \
-	ft_strdup.o ft_strchr.o ft_printfdd.o ft_zero.o ft_checkptr.o ft_njma.o
+	ft_strdup.o ft_strchr.o ft_printfdd.o ft_zero.o ft_checkptr.o ft_njma.o ft_njma1.o \
+	ft_printf.o
 
 all : $(NAME)
 
@@ -35,6 +37,25 @@ re : fclean all
 
 test : re
 	@clear
+	@gcc -g -Wall -Wextra -Werror ft_printf.c yassine.c libftprintf.a
+	@./a.out
+	@make fclean
+
+test1 : re
+	@clear
 	@gcc -g -Wall -Wextra -Werror ft_printf.c main.c libftprintf.a
 	@./a.out
 	@make fclean
+
+test2 : re
+	@clear
+	@gcc -g -Wall -Wextra -Werror ft_printf.c dib.c libftprintf.a
+	@./a.out
+	@make fclean
+
+test3 : re
+	@clear
+	@gcc -g -Wall -Wextra -Werror ft_printf.c jmain.c libftprintf.a
+	@./a.out
+	@make fclean
+
